--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -3,12 +3,14 @@
 
 $font-bebas: 'Bebas Neue', 'cursive';
 $font-articulat: "articulat-cf", sans-serif;
+$font-helvetica-cd: "Helvetica Neue Condensed", sans-serif;
 
 $font-body: $font-bebas;
 
 $font-families: (
     "bebas": "Bebas Neue",
     "articulat": "articulat-cf",
+    "helvetica-cd": "Helvetica Neue Condensed",
 );
 
 @each $name,
@@ -17,6 +19,24 @@ $font-family in $font-families {
         font-family: $font-family, sans-serif;
     }
 }
+
+$asset-path: "../webfonts/";
+
+/* Fonts includer */
+@mixin font-face($font-family, $font-file, $weight: "normal", $style: "normal") {
+    @font-face {
+        font-family: $font-family;
+        src: local($font-file), url($asset-path + $font-file + ".woff") format("woff"),
+            url($asset-path + $font-file + ".woff2") format("woff2"),
+            url($asset-path + $font-file + ".eot") format("embedded-opentype"),
+            url($asset-path + $font-file + ".ttf") format("truetype");
+        font-weight: $weight;
+        font-style: $style;
+    }
+}
+
+@include font-face("Helvetica Neue Condensed", "HelveticaNeueBoldCondensed", 400);
+@include font-face("Helvetica Neue Condensed", "HelveticaNeueBlackCondensed", 700);
 
 $font-weights: 300, 400, 500, 600, 700, 800, 900;
 
