--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
 $primary: #03CC47;
+$secondary: #282828;
 $dark: #262626;
 $white: #ffffff;
 $black: #000000;
@@ -8,6 +9,7 @@ $light-grey: #928B8A;
 $theme-colors: (
     ) !default;
 $theme-colors: map-merge(("primary": $primary,
+            "secondary": $secondary,
             "dark": $dark,
             "white": $white,
             "black": $black,
