--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -19,10 +19,11 @@ header {
     .navigation-bar {
         background: $dark;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(lg) {
+            background: $white;
+            
             .logo-bar {
                 padding: 6px 24px;
-                background-color: $white;
 
                 .abbreviation {
                     color: $primary;
@@ -50,9 +51,13 @@ section.banner {
     padding: 61px 0 246px;
     position: relative;
 
+    @include media-breakpoint-down(xl) {
+        padding: 61px 0 176px;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0 20%, #1b1b1b 70% 100%), imgUrl('banner.png') 50% top;
+    }
+
     @include media-breakpoint-down(sm) {
         padding: 36px 0 176px;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0 20%, #1b1b1b 70% 100%), imgUrl('banner.png') 50% top;
     }
 
     .tree-lopper-guy {
@@ -88,13 +93,23 @@ section.banner {
 }
 
 section.about {
-    background: imgUrl('about.png') left center;
     background-size: contain;
-    padding: 150px 0;
+    padding: 80px 0 0;
+    
+    @include media-breakpoint-up(lg) {
+        padding: 80px 0;
+    }
+
+    @include media-breakpoint-up(lg) {
+        padding: 150px 0;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        background: imgUrl('about.png') left center;
+    }
 
     @include media-breakpoint-down(sm) {
         padding: 12px 0;
-        background: none;
     }
 
     .sm-heading {
@@ -140,7 +155,7 @@ section.services {
             padding: 32px 37px 54px;
             color: $white;
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(lg) {
                 padding: 27px 31px 54px;
             }
         }
