--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -21,7 +21,7 @@ header {
 
         @include media-breakpoint-down(lg) {
             background: $white;
-            
+
             .logo-bar {
                 padding: 6px 24px;
 
@@ -48,16 +48,10 @@ header {
 section.banner {
     background: linear-gradient(90deg, #1b1b1b 0 50%, rgba(0, 0, 0, 0) 70% 100%), imgUrl('banner.png') right center;
     background-size: contain;
-    padding: 61px 0 246px;
     position: relative;
 
     @include media-breakpoint-down(xl) {
-        padding: 61px 0 176px;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0 20%, #1b1b1b 70% 100%), imgUrl('banner.png') 50% top;
-    }
-
-    @include media-breakpoint-down(sm) {
-        padding: 36px 0 176px;
     }
 
     .tree-lopper-guy {
@@ -70,11 +64,47 @@ section.banner {
         }
     }
 
+    .banner-inner {
+        background: linear-gradient(90deg, #1b1b1b 0 50%, rgba(0, 0, 0, 0) 70% 100%);
+        position: relative;
+        z-index: 100;
+        padding: 61px 0 246px;
+
+        @include media-breakpoint-down(xl) {
+            padding: 61px 0 176px;
+        }
+
+        @include media-breakpoint-down(lg) {
+            background: none;
+        }
+
+        @include media-breakpoint-down(sm) {
+            padding: 36px 0 176px;
+        }
+    }
+
+    .falling-leaves {
+        position: absolute;
+        right: 0;
+        top: 0;
+        opacity: 20%;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+
+        @include media-breakpoint-down(lg) {
+            display: none;
+        }
+    }
+
     .white-trees {
         position: absolute;
         bottom: 0;
         width: 100%;
+        z-index: 110;
     }
+
+
 
     @include media-breakpoint-down(sm) {
         .heading {
@@ -95,7 +125,7 @@ section.banner {
 section.about {
     background-size: contain;
     padding: 80px 0 0;
-    
+
     @include media-breakpoint-up(lg) {
         padding: 80px 0;
     }
@@ -141,7 +171,7 @@ section.services {
     }
 
     .white-trees {
-        transform: rotate(180deg)
+        transform: rotate(180deg);
     }
 
     .service-card {
@@ -165,6 +195,10 @@ section.services {
                 font-size: 2.5625rem !important;
             }
         }
+    }
+
+    .more-services {
+        display: none;
     }
 
     .form {
